--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -22,6 +22,6 @@ knitr::include_graphics("../figures/02_hierarchical_demo-1.pdf")
 knitr::include_graphics("../figures/03_wetland_potential-1.pdf")
 ```
 
-```{r nlcd-versus-cdl, fig.cap = "nlcd-versus_cdl", warning=FALSE, echo = FALSE}
+```{r nlcd-versus-cdl, fig.cap = "Comparison between NLCD derived and CDL derived total watershed ag and watershed pasture cover.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/04_nlcd-versus-cdl-1.pdf")
 ```
