--- a/figures/01_county_extent.Rmd
+++ b/figures/01_county_extent.Rmd
@@ -8,12 +8,81 @@ header-includes:
 knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 5, fig.height = 5)
 ```
 
-```{r read_explore_chunk, echo=FALSE, eval=TRUE}
-# setwd("figures")
-knitr::read_chunk("../scripts/explore_lagos_ag.R")
-```
-
 ```{r lagos_setup, echo=FALSE, message=FALSE, eval=TRUE, warning=FALSE}
+# setwd("_episodes_rmd")
+library(vapour)
+library(LAGOSNE)
+library(magrittr)
+library(dplyr)
+library(lme4)
+library(sf)
+library(units)
+library(merTools)
+library(ggplot2)
+library(cowplot)
+library(ggridges)
+library(tidyr)
+library(ggExtra)
+
+ep <- readRDS("data/ep.rds")
+gdb_path <- path.expand("~/.local/share/LAGOS-GIS/lagos-ne_gis.gpkg")
+# st_layers(gdb_path)
+layer_name <- "COUNTY"
+county <- st_read(gdb_path, layer_name, quiet = TRUE)
+states <- st_as_sf(maps::map("state", fill = TRUE, plot = FALSE))
+
+pull_ag_polygons <- function(hi_ag_iws, county){
+  layer_name <- "IWS"
+  crs <- st_crs(county)
+  # system(paste("ogrinfo -so", gdb_path, layer_name))
+  query      <- paste0("SELECT * FROM ", layer_name,
+                       " WHERE lagoslakeid IN ('",
+                       paste0(hi_ag_iws$lagoslakeid,
+                              collapse = "', '"), "');")
+  iws <- st_as_sfc(vapour_read_geometry(gdb_path, sql = query))
+  iws <- st_sf(vapour_read_attributes(gdb_path, sql = query),
+               geometry = iws, crs = crs)
+  iws <- st_zm(iws)
+  iws <- st_cast(iws, "MULTIPOLYGON") # solves error: Unknown WKB type 12
+
+  ## filter counties that intersect hi ag iws
+  hi_ag_counties_intersects <- st_intersects(county, iws)
+  hi_ag_counties_intersects <- unlist(lapply(hi_ag_counties_intersects,
+                                             function(x) length(x > 0)))
+  county <- county[hi_ag_counties_intersects > 0,]
+
+  ## get number of counties intersecting hi ag iws
+  hi_ag_iws_intersects <- st_intersects(iws, county)
+  hi_ag_iws_intersects <- unlist(lapply(hi_ag_iws_intersects,
+                                        function(x) length(x > 0)))
+
+  list(iws = iws,
+       county = county,
+       counties_intersects = hi_ag_counties_intersects,
+       iws_intersects = hi_ag_iws_intersects)
+}
+
+get_iws_polygon <- function(lagoslakeid, crs){
+  layer_name <- "IWS"
+  # system(paste("ogrinfo -so", gdb_path, layer_name))
+  query      <- paste0("SELECT * FROM ", layer_name,
+                       " WHERE lagoslakeid IN ('",
+                       paste0(lagoslakeid,
+                              collapse = "', '"), "');")
+  iws <- st_as_sfc(vapour_read_geometry(gdb_path, sql = query))
+  iws <- st_sf(vapour_read_attributes(gdb_path, sql = query),
+               geometry = iws, crs = crs)
+  iws <- st_zm(iws)
+  st_cast(iws, "MULTIPOLYGON") # solves error: Unknown WKB type 12
+}
+
+lg          <- lagosne_load("1.087.1")
+iws_lulc    <- readRDS("data/iws_lulc.rds")
+county_lulc <- readRDS("data/county_lulc.rds")
+
+iws_vs_county_ag <- iws_lulc %>%
+  left_join(dplyr::select(lg$locus, lagoslakeid, county_zoneid))  %>%
+  left_join(dplyr::select(county_lulc, county_zoneid:county_ag_2011_pcent))
 
 ```
 
@@ -28,5 +97,36 @@ cat(paste(c("Lake Mendota", "Oneida Lake")[which(llids %in% ep$lagoslakeid)], "i
 <!-- * Find counties that intersect large numbers of hi ag iws with tp + tn data -->
 
 ```{r 01_county_extent, eval=TRUE, echo=FALSE, fig.width = 5.5, fig.height = 3}
+# counties that overlap hi ag iws with ep data
+# setwd("_episodes_rmd")
 
+hi_ag_iws_w_ep <- pull_ag_polygons(ep, county)
+
+n_iws <- unlist(lapply(
+  st_intersects(hi_ag_iws_w_ep$county, hi_ag_iws_w_ep$iws),
+  function(x) length(x)))
+
+hi_ag_iws_w_ep$county$n_iws <- n_iws
+
+states <- st_transform(states, st_crs(hi_ag_iws_w_ep$county))
+state_intersects <- st_intersects(states, hi_ag_iws_w_ep$county)
+state_intersects <- states[unlist(lapply(
+  state_intersects,
+  function(x) length(x) > 3)),]
+
+hi_ag_iws_w_ep$county <- hi_ag_iws_w_ep$county[
+  unlist(lapply(st_intersects(hi_ag_iws_w_ep$county, state_intersects), function(x) length(x) > 0)),]
+
+# color by number of iws intersections
+ggplot() +
+  geom_sf(data = state_intersects) +
+  geom_sf(data = hi_ag_iws_w_ep$county, aes(fill = n_iws)) +
+  # ggtitle(paste0("# of overlappling IWS with > 40% ag & epi nutrient data \n
+          # where > 4 measurements between 1995 and 2005")) +
+  theme(title = element_text(size = 10)) +
+  labs(fill = paste0("# lakes \n (", nrow(ep), " total)"))
+
+# mapview::mapview(hi_ag_iws_w_ep$county, zcol = "n_iws")
+
+# cat(paste0(nrow(ep), " total lakes"))
 ```
