--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -10,7 +10,7 @@ output:
 knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 5, fig.height = 6, dev = c("pdf"))
 ```
 
-```{r county_extent, fig.cap = "Number of lake watersheds per county where lakes are limited to those with high agricultural land-use cover (greater than 40 percent) and water quality data in LAGOS from at least 3 sampling events between 1995 and 2005.", warning=FALSE, echo = FALSE}
+```{r county_extent, fig.cap = "Number of lake watersheds per county where lakes are limited to those with high agricultural land-use cover (greater than 40 percent) and water quality data in LAGOS from at least 3 sampling events between 2000 and 2010.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/01_county_extent-1.pdf")
 ```
 
@@ -22,7 +22,7 @@ knitr::include_graphics("../figures/02_hierarchical_demo-1.pdf")
 knitr::include_graphics("../figures/03_wetland_potential-1.pdf")
 ```
 
-```{r nlcd-versus-cdl, fig.cap = "Comparison between NLCD derived and CDL derived total watershed ag and watershed pasture cover.", warning=FALSE, echo = FALSE}
+```{r nlcd-versus-cdl, fig.cap = "Comparison between NLCD (2011) derived and CDL (2010) derived total watershed ag and watershed pasture cover.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/04_nlcd-versus-cdl-1.pdf")
 ```
 
