--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -14,7 +14,7 @@ knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 5, fig.
 knitr::include_graphics("../figures/01_county_extent-1.pdf")
 ```
 
-```{r hierarchical_demo, fig.cap = "A) Global (dashed line) and regional (solid lines) fits to the relationship between lake chlorophyll and lake phosphorus. B) Number of lakes per region.", warning=FALSE, echo = FALSE}
+```{r hierarchical_demo, fig.cap = "A) Global (dashed line) and regional (solid lines) fits to the relationship between lake phosphorus and IWS Ag. land use cover from the 2011 NLCD. A hierarchical model would weight these relationships by sample size (darker lines = higher sample size). B) Number of lakes per region.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/02_hierarchical_demo-1.pdf")
 ```
 
