--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -29,3 +29,7 @@ knitr::include_graphics("../figures/04_nlcd-versus-cdl-1.pdf")
 ```{r cafos, fig.cap = "Livestock data from the 2007 USDA Census of Agriculture.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/05_cafos-1.pdf")
 ```
+
+```{r lulc_buffers, fig.cap = "Landuse cover in stream buffers.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/06_lulc_buffer_demo-1.pdf")
+```
