--- a/figures/02_hierarchical_demo.Rmd
+++ b/figures/02_hierarchical_demo.Rmd
@@ -9,16 +9,12 @@ knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 5, fig.
 ```
 
 ```{r hu4_n, echo=FALSE, message=TRUE, eval=TRUE}
-library(kableExtra)
 library(dplyr)
-library(tidyr)
-library(magrittr)
-
-library(LAGOSNE)
 library(LAGOSextra)
 library(sf)
 library(ggplot2)
 library(cowplot)
+library(classInt)
 
 # setwd("figures")
 ids <- test <- readRDS("../data/dt.rds") %>%
@@ -29,11 +25,20 @@ hu4 <-  LAGOSextra::query_gis("HU4", "ZoneID", ids$hu4_zoneid) %>%
   st_cast(to = "MULTIPOLYGON") %>%
   left_join(ids, by = c("ZoneID" = "hu4_zoneid"))
 
+n_cat  <- 6
+colors <- c("#FFFFFF", viridisLite::viridis(n_cat - 1))
+hu4    <- mutate(hu4, 
+                 n_cat = cut(hu4$n, breaks = classInt::classIntervals(hu4$n, n = n_cat)$brks))
+hu4 <- dplyr::filter(hu4, !is.na(n_cat))
+
 # hist(hu4$n, n = 20)
 # table(as.character(dt$hu4_zoneid))
 ```
 
 ```{r 02_hierarchical_demo, fig.height=3, echo=FALSE}
+library(tidyr)
+library(LAGOSNE)
+
 lg <- lagosne_load("1.087.1")
 
 ep <- left_join(dplyr::select(lg$locus, lagoslakeid, hu4_zoneid), 
@@ -84,7 +89,7 @@ coords$ZoneID <- gsub("HU4_", "", hu4[,"ZoneID"]$ZoneID)
 
 plot_grid(
   ggplot(data = dt, aes(x = ag_pct, y = tp, color = hu4_zoneid, alpha = n)) + 
-    geom_point() +
+    # geom_point() +
     geom_line(stat = "smooth", method = lm, se = FALSE, aes(alpha = n))  +
     geom_smooth(aes(group = 1), method = lm, se = FALSE, 
                 color = "black", linetype = "dashed") +
@@ -92,13 +97,15 @@ plot_grid(
     theme(legend.position = "") +
     labs(x = "Ag. LULC (pct, NLCD 2011)", 
          y = "TP")  +
-    ylim(0, 300),
+    scale_y_continuous(breaks = seq(0, 250, by = 50), limits = c(0, 300)),
   ggplot() +
-    geom_sf(data = hu4, aes(fill = n)) +
+    geom_sf(data = hu4, aes(fill = n_cat)) +
     # geom_text(data = coords, aes(x = x, y = y, label = ZoneID)) +   
     theme_minimal() + 
     theme(legend.position = "bottom", 
-          axis.title = element_blank()), 
+          axis.title = element_blank(), 
+          legend.title = element_blank()) + 
+    scale_fill_manual(values = colors, levels(hu4$n_cat)), 
   rel_heights = c(0.6, 1), labels = "AUTO"
 )
 ``` 
