--- a/figures/06_lulc_buffer_demo.Rmd
+++ b/figures/06_lulc_buffer_demo.Rmd
@@ -12,7 +12,7 @@ source("../scripts/utils.R")
 ```{r 06_lulc_buffer_demo, echo=FALSE, eval=TRUE}
 # setwd("figures")
 library(nhdR)
-library(LAGOSextra)
+library(LAGOSNEgis)
 library(mapview)
 library(FedData)
 library(dplyr)
