make gis gpkg, use 99_utils not utils

--- a/figures/05_cafos.Rmd
+++ b/figures/05_cafos.Rmd
@@ -6,7 +6,7 @@ header-includes:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 7, fig.height = 7)
-source("../scripts/utils.R")
+source("../scripts/99_utils.R")
 ```
 
 ```{r 05_cafos, echo=FALSE, eval=TRUE}
