--- a/figures/06_lulc_buffer_demo.Rmd
+++ b/figures/06_lulc_buffer_demo.Rmd
@@ -6,7 +6,7 @@ header-includes:
 
 ```{r setup, include=FALSE}
 knitr::opts_chunk$set(echo = TRUE, fig.path = "../figures/", fig.width = 7, fig.height = 7)
-source("../scripts/utils.R")
+source("../scripts/99_utils.R")
 ```
 
 ```{r 06_lulc_buffer_demo, echo=FALSE, eval=TRUE}
