--- a/manuscript/figures.Rmd
+++ b/manuscript/figures.Rmd
@@ -33,3 +33,7 @@ knitr::include_graphics("../figures/05_cafos-1.pdf")
 ```{r lulc_buffers, fig.cap = "Landuse cover in stream buffers.", warning=FALSE, echo = FALSE}
 knitr::include_graphics("../figures/06_lulc_buffer_demo-1.pdf")
 ```
+
+```{r exploratory_dotplot, fig.cap = "Exploratory dotplots showing absolute value correlations.", warning=FALSE, echo = FALSE}
+knitr::include_graphics("../figures/08_exploratory_dotplot-1.pdf")
+```
